--- a/lain.yaml
+++ b/lain.yaml
@@ -3,10 +3,10 @@ appname: mysql-service
 build:
     base: laincloud/centos-lain:20170103
     prepare:
-        version: 201
+        version: 202
         script:
             - yum install -y http://dev.mysql.com/get/mysql-community-release-el7-5.noarch.rpm
-            - rpm --import http://dev.mysql.com/doc/refman/5.6/en/checking-gpg-signature.html
+            - gpg --keyserver hkp://keys.gnupg.net --recv-keys 5072E1F5
             - yum install -y mysql-community-server
             - yum install -y http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
             - yum install -y percona-xtrabackup-2.2.12
