--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ install:
   - pip install lain-cli
 
 script:
+  - lain config save-global private_docker_registry registry.lain.local
   - lain build
