--- a/lain.yaml
+++ b/lain.yaml
@@ -6,7 +6,7 @@ build:
         version: 203
         script:
             - yum install -y http://dev.mysql.com/get/mysql-community-release-el7-5.noarch.rpm
-            - gpg --keyserver hkp://keys.gnupg.net --recv-keys 5072E1F5
+            - gpg --keyserver hkp://keys.gnupg.net:80 --recv-keys 5072E1F5
             - yum install -y mysql-community-server
             - yum install -y http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
             - yum install -y percona-xtrabackup-2.2.12
